# eastr-cpp

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
conda/: meta.yaml
include/eastr/: bam_filter.hpp  bed_parser.hpp  bowtie2_runner.hpp  fasta_index.hpp  gtf_parser.hpp  input_detect.hpp  junction.hpp  junction_accumulator.hpp  junction_extractor.hpp  multi_bam_reader.hpp  output_writer.hpp  parallel_bam_extractor.hpp  path_utils.hpp  self_aligner.hpp  spurious_detector.hpp  streaming_spurious_detector.hpp  thread_pool.hpp  types.hpp  version.hpp.in
scripts/: build_hg38_noPARs_index.sh
src/: bam_filter.cpp  bed_parser.cpp  bowtie2_runner.cpp  fasta_index.cpp  gtf_parser.cpp  input_detect.cpp  junction.cpp  junction_accumulator.cpp  junction_extractor.cpp  main.cpp  multi_bam_reader.cpp  output_writer.cpp  parallel_bam_extractor.cpp  path_utils.cpp  self_aligner.cpp  spurious_detector.cpp  streaming_spurious_detector.cpp  thread_pool.cpp  types.cpp
test_data/: README.md  bam_list.txt
test_data/chr4_subset/: SRR14056780_chr4.bam  SRR14056780_chr4.bam.bai  SRR14056781_chr4.bam  SRR14056781_chr4.bam.bai  SRR14056782_chr4.bam  SRR14056782_chr4.bam.bai
test_data/indices/bowtie2/: arabidopsis_ref.1.bt2  arabidopsis_ref.rev.1.bt2
tests/: CMakeLists.txt  test_alignment_score.cpp  test_bed_parser.cpp  test_input_detect.cpp  test_junction.cpp  test_main.cpp  test_path_utils.cpp  test_strand_handling.cpp
